# DepositAPI

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
DepositAPI/: run.py  test_calculate_func.py
depositapi/: main.py  test_main.py
