[tool.poetry]
name = "DepositAPI"
version = "0.1.0"
description = "DepositAPI - это API для расчета депозита по вкладу."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.114.1"
pydantic = "2.9.1"
pydantic-core = "2.23.3"
python-dateutil = "2.9.0.post0"
httpx = "^0.27.2"
uvicorn = "^0.30.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "run:main"